2010-02-25 Ingo Renner  <ingo@typo3.org>

	* Changed the variable's name used to configure the Tika jar path

2010-02-24 Ingo Renner  <ingo@typo3.org>

	* Added the language detection service
	* Increased version to 0.5.0, set status to beta
	* Added meta data extraction support for several formats

2010-02-23 Ingo Renner  <ingo@typo3.org>

	* Fixed an UTF8 issue with the text extraction service when using local Tika
	* Added support for text extraction from OOo 1/ .sxw documents
	* Added the meta data extraction service

2010-02-22 Ingo Renner  <ingo@typo3.org>

	* Added the text extraction service

2009-12-26 Ingo Renner  <ingo@typo3.org>

	* initial code generated with kickstarter