@@ -1,3 +1,7 @@
+2010-03-08 Ingo Renner  <ingo@typo3.org>
+
+	* Added an option to use a Solr server for (text) extraction instead of Tika
+
 2010-02-25 Ingo Renner  <ingo@typo3.org>
 
 	* Changed the variable's name used to configure the Tika jar path
